Desacoplamento dos dados dinâmicos do html. Movidos para as classes typescript utilizando interpolação.

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,11 +6,19 @@
 
 <div class="articles">
     <div class="articles-main">
-        <app-big-card></app-big-card>
+        <app-big-card cardTitle="É lançada a nova versão do Angular."></app-big-card>
     </div>
     <div class="articles-others">
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
+        <app-small-card 
+            cardTitle="Conheça os novos módulos do Framework Spring." 
+            photoCover="https://www.sosdigital.com.br/wp-content/uploads/2020/08/java-spring-framework-1024x683-1.jpg">
+        </app-small-card>
+        <app-small-card 
+            cardTitle="Django é um framework para desenvolvimento rápido para web, escrito em Python." 
+            photoCover="https://assets.website-files.com/5b6901669b93d7837e36dc4c/615e1104ffbf5ae592265cc7_python-django.png">
+        </app-small-card><app-small-card 
+        cardTitle="Ruby on Rails promete aumentar velocidade de sites orientados a banco de dados." 
+        photoCover="https://res.cloudinary.com/practicaldev/image/fetch/s--jvDLhx0b--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/i/cpcr5w0kgl6j94tss7n9.png">
+    </app-small-card>
     </div>
 </div>
