--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,10 +1,10 @@
 <div class="container">
     <div class="small-card-content">
         <div class="small-card-photo">
-            <img src="https://marcdias.com.br/wp-content/uploads/2016/07/reactjs.png" alt="">
+            <img src="{{ photoCover }}" alt="">
         </div>
         <div class="card-title">
-            <h1><a href="#">Essa é a nossa notícia secundária. Ela fica ao lado da página.</a></h1>
+            <h1><a href="#">{{ cardTitle }}</a></h1>
         </div>
     </div>
     <div class="small-card-separator">
